<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolorlight"
    tools:context=".game">

    <Button
        android:id="@+id/num_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <Button
        android:id="@+id/num_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/num_60"
        app:layout_constraintTop_toBottomOf="@+id/num_30" />

    <Button
        android:id="@+id/num_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_20" />

    <Button
        android:id="@+id/num_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_60"
        app:layout_constraintStart_toEndOf="@+id/num_10"
        app:layout_constraintTop_toBottomOf="@+id/num_20" />

    <Button
        android:id="@+id/num_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_70"
        app:layout_constraintStart_toEndOf="@+id/num_50"
        app:layout_constraintTop_toBottomOf="@+id/num_60" />

    <Button
        android:id="@+id/num_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/num_70"
        app:layout_constraintTop_toBottomOf="@+id/num_40" />

    <Button
        android:id="@+id/num_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_10" />

    <Button
        android:id="@+id/num_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/num_90"
        app:layout_constraintTop_toBottomOf="@+id/num_70" />

    <Button
        android:id="@+id/num_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_50" />

    <Button
        android:id="@+id/num_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/num_20"
        app:layout_constraintEnd_toStartOf="@+id/num_30"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/timerTextView"
        android:textColor="@color/maincolor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Scorevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:textColor="@color/maincolor"
        android:text="@string/Scorevalue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toEndOf="@+id/Score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:textColor="@color/maincolor"
        android:text="@string/Score"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/timerTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/total"
        android:layout_width="123dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/maincolor"
        android:ems="10"
        android:inputType="text"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_num" />


    <TextView
        android:id="@+id/select_num"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="84dp"
        android:text="@string/select_num"
        android:textAlignment="center"
        android:textColor="@color/maincolor"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="171dp"
        android:layout_height="58dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/submit_button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_90" />

    <Button
        android:id="@+id/bck_button"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/bck_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/maincolor"
        android:text="@string/restart_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bck_button"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:text="Value"
        android:textColor="@color/maincolor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTextView" />

    <TextView
        android:id="@+id/display_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:text="@string/display_num"
        android:textColor="@color/maincolor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/select_num"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="Selectsble Buttons"
        android:textColor="@color/maincolor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score" />

</androidx.constraintlayout.widget.ConstraintLayout>